--- a/src/components/ItemDetail/ItemDetail.css
+++ b/src/components/ItemDetail/ItemDetail.css
@@ -1,5 +1,33 @@
 .cardItem {
-    background-color:cornflowerblue;
-    max-width: 40%;
-    display:inline
-}
+    display: inline-block;
+    width: 300px;
+    margin: 20px;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+    background-color: #fff;
+    text-align: center;
+  }
+  .ItemHeader {
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 10px;
+  }
+  
+  .ItemImg {
+    width: 100%;
+    height: 400px;
+    object-fit: cover;
+  }
+  
+  .Info {
+    font-size: 18px;
+    margin-bottom: 10px;
+  }
+  
+  .ItemFooter {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
