--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,11 +1,42 @@
-.titulo-react{
-    background-color: brown;
-    color: azure;
+.NavBar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 80px;
+    background-color: #ff4747;
+    color: white;
+    padding: 0 20px;
     text-decoration: none;
-}
-.Categories{
-    padding: 5px;
-    background-color: aqua;
+  }
+  
+  .titulo-react {
+    font-size: 28px;
+    font-weight: bold;
     text-decoration: none;
-    
-}
+    color: white;
+  }
+  
+  
+  .Categories {
+    display: flex;
+  }
+  
+  .Option {
+    margin-left: 10px;
+    font-size: 18px;
+    text-decoration: none;
+    color: white;
+    transition: 0.3s ease-in-out;
+  }
+  
+  .Option:hover {
+    color: #d40000;
+  }
+  
+  .ActiveOption {
+    margin-left: 10px;
+    font-size: 18px;
+    text-decoration: none;
+    color: #351800;
+  }
+  
