--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -14,16 +14,21 @@
   .modal-header {
     font-size: 24px;
     margin-bottom: 16px;
+    background-color: brown;
+    color: azure;
+    border-radius: 20%;
+    border: 1px solid black;
+    padding: 10px;
   }
   
   .Button {
     padding: 8px 16px;
-    background-color: #007bff;
+    background-color:brown;
     color: #fff;
     border: none;
     border-radius: 4px;
     margin-top: 16px;
-    cursor: pointer;
+  
   }
   
   
@@ -32,5 +37,12 @@
     border-radius: 4px;
     padding: 16px;
     margin-bottom: 16px;
+  }
+  .total{
+    background-color:rgb(96, 192, 0);
+    color: azure;
+    border-radius: 20%;
+    border: 1px solid black;
+    padding: 10px;
   }
   
