--- a/src/components/CartItem/CartItem.css
+++ b/src/components/CartItem/CartItem.css
@@ -3,6 +3,7 @@
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 4px;
+    background-color:cornsilk;
   }
   
   .itemCarrito h4 {
